--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
     <head>
                     <meta charset="utf-8">
                     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -8,21 +8,22 @@
                     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
                     crossorigin="anonymous">
     </head>
-    <body style="background-color: #696969">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/"> МАРС ПРИВЕТ</a>
+    <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <a href="/">
+    <img src="{{ url_for('static', filename='img/box.png') }}" alt="БАРАХОЛКА" height="75px">
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="/addjob">Добавить работу</a>
+        <a class="nav-link" href="/addjob" style="color:black">Добавить работу</a>
       </li>
         <li class="nav-item">
             {% if current_user.is_authenticated %}
-    <a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
+    <a class="navbar-brand" href="/logout" style="color:orange">{{ current_user.name }}</a>
 {% else %}
     <p align="right">
         <a class="btn btn-primary " href="/register">Зарегистрироваться</a>
@@ -35,6 +36,9 @@
 </nav>
     {% block content %} {% endblock %}
     </body>
+    <footer>
+        <h1>Hello</h1>
+    </footer>
 
 
 
