--- a/SQL_alchemy/templates/base.html
+++ b/SQL_alchemy/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
     <head>
                     <meta charset="utf-8">
                     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,36 +9,47 @@
                     crossorigin="anonymous">
     </head>
     <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a href="/">
-    <img src="{{ url_for('static', filename='img/box.png') }}" alt="БАРАХОЛКА" height="75px">
-  </a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+   <a href="/">
+     <img src="img/box.png" alt="БАРАХОЛКА" height="75px">
+   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="/addjob" style="color:black">Добавить работу</a>
-      </li>
         <li class="nav-item">
-            {% if current_user.is_authenticated %}
-    <a class="navbar-brand" href="/logout" style="color:orange">{{ current_user.name }}</a>
-{% else %}
-    <p align="right">
+        <a class="nav-link" href="/catalog">Каталог</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/seller" style="text-align: right">Продать</a>
+      </li>
+      <li class="nav-item">
+        {% if current_user.is_authenticated %}
+    <a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
+    {% else %}
+    <p>
         <a class="btn btn-primary " href="/register">Зарегистрироваться</a>
         <a class="btn btn-success" href="/login">Войти</a>
     </p>
-{% endif %}
-        </li>
+    {% endif %}
+          </li>
     </ul>
   </div>
 </nav>
-    {% block content %} {% endblock %}
+
+    {% if current_user.is_authenticated %}
+        {% block content %}
+        {% endblock %}
+    {% else %}
+    <div class="parent">
+      <div class="child">Войдите в систему</div>
+    </div>
+    {% endif %}
+    {% block login %}
+    {% endblock %}
     </body>
-    <footer>
-        <h1>Hello</h1>
-    </footer>
 
 
 
