--- a/SQL_alchemy/templates/base.html
+++ b/SQL_alchemy/templates/base.html
@@ -23,6 +23,9 @@
         <a class="nav-link" href="/catalog">Каталог</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/basket" style="text-align: right">Корзина</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/seller" style="text-align: right">Продать</a>
       </li>
       <li class="nav-item">
