--- a/SQL_alchemy/templates/basket.html
+++ b/SQL_alchemy/templates/basket.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1 style="text-align: center">Корзина</h1>
-    <a class="btn btn-success " href="/buy" style="text-align: center">Оформить покупку</a>
+    <a class="btn btn-success " href="/buy" style="text-align: center">Оформить покупку</a>  <!-- Попытаться обернуть в div -->
 
 </body>
 {% endblock %}
