--- a/SQL_alchemy/templates/base.html
+++ b/SQL_alchemy/templates/base.html
@@ -11,7 +11,7 @@
     <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
    <a href="/">
-     <img src="img/box.png" alt="БАРАХОЛКА" height="75px"> <!-- <img src="{{ url_for('static', filename='img/box.png') }}" alt="БАРАХОЛКА" height="75px"> -->
+     <img src="{{ url_for('static', filename='img/box.png') }}" alt="БАРАХОЛКА" height="75px">
    </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -23,7 +23,7 @@
         <a class="nav-link" href="/catalog">Каталог</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/basket" style="text-align: right">Корзина</a>
+        <a class="nav-link" href="{{ url_for('basket') }}">Корзина</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/seller" style="text-align: right">Продать</a>
