--- a/SQL_alchemy/templates/basket.html
+++ b/SQL_alchemy/templates/basket.html
@@ -1,12 +1,58 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <head>
-    <title>Корзина</title>
-</head>
-<body>
-    <h1 style="text-align: center">Корзина</h1>
-    <a class="btn btn-success " href="/buy" style="text-align: center">Оформить покупку</a>  <!-- Попытаться обернуть в div -->
+<style>
+  td {
+    overflow-wrap: break-word;
+    word-break: break-word;
+  }
+  .parent {
+    display: flex;
+    justify-content: center;
+    padding-top: 300px;
+  }
+  .child {
+    font-size: 150px;
+  }
+</style>
 
-</body>
+{% if current_user.is_authenticated %}
+    <h1 align="center">Корзина</h1>
+    {% if items %}
+        <table class="table table-dark">
+            <thead>
+                <tr>
+                    <th scope="col">Предмет</th>
+                    <th scope="col">Цена</th>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for item in items %}
+                    <tr>
+                        <td>{{ item['item_name'] }}</td>
+                        <td>{{ item['price'] }} руб.</td>
+                        <td>
+                            <form action="{{ url_for('buy') }}" method="POST">
+                                <button class="btn btn-success">Купить</button>
+                            </form>
+                        </td>
+                        <td>
+                            <form action="{{ url_for('remove_from_basket', item_id=item['item_id']) }}" method="POST">
+                                <button class="btn btn-danger">Удалить</button>
+                            </form>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    {% else %}
+        <p align="center"><a href="/catalog">Пусто &#129396;</a></p>
+    {% endif %}
+{% else %}
+    <div class="parent">
+        <div class="child">Войдите в систему</div>
+    </div>
+{% endif %}
 {% endblock %}
