--- a/SQL_alchemy/templates/login.html
+++ b/SQL_alchemy/templates/login.html
@@ -2,6 +2,9 @@
 
 {% block login %}
     <h1>Авторизация</h1>
+    <form action="{{ url_for('register') }}">
+        <button class="btn btn-danger">Регистрация</button>
+    </form>
     <form action="" method="post">
         {{ form.hidden_tag() }}
         <p>
