--- a/SQL_alchemy/templates/register_user.html
+++ b/SQL_alchemy/templates/register_user.html
@@ -39,4 +39,7 @@
         <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
         <div>{{ message }}</div>
     </form>
+    <footer>
+        <p style="text-align: center">Уже слиты данные {{ random_number }} пользователей</p>
+    </footer>
 {% endblock %}
