--- a/SQL_alchemy/templates/item_desc.html
+++ b/SQL_alchemy/templates/item_desc.html
@@ -11,7 +11,7 @@
         <h1 style="text-align: center">{{ item_name }}</h1>
          {% if image_path %}
             <div style="text-align: center; margin: 20px 0">
-                <img                                <! спросить про картинку -->
+                <img                                <! попробовать \static\{{ image_path }} -->
                     src="static\{{ image_path }}"
                     alt="static\{{ image_path }}"
                     style="max-width: 500px; border-radius: 8px"
