--- a/SQL_alchemy/templates/item_desc.html
+++ b/SQL_alchemy/templates/item_desc.html
@@ -11,8 +11,8 @@
         <h1 style="text-align: center">{{ item_name }}</h1>
          {% if image_path %}
             <div style="text-align: center; margin: 20px 0">
-                <img                                <! попробовать \static\{{ image_path }} -->
-                    src="static\{{ image_path }}"
+                <img
+                    src="\static\{{ image_path }}"
                     alt="static\{{ image_path }}"
                     style="max-width: 500px; border-radius: 8px"
                 >
