--- a/SQL_alchemy/templates/base.html
+++ b/SQL_alchemy/templates/base.html
@@ -8,7 +8,7 @@
                     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
                     crossorigin="anonymous">
     </head>
-    <body>
+    <body style="background-color: {{ bg }}">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
    <a href="/">
      <img src="{{ url_for('static', filename='img/box.png') }}" alt="БАРАХОЛКА" height="75px">
@@ -27,6 +27,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/seller" style="text-align: right">Продать</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="/theme" style="text-align: right">Сменить тему</a>
       </li>
       <li class="nav-item">
         {% if current_user.is_authenticated %}
