--- a/templates/items_list.html
+++ b/templates/items_list.html
@@ -34,7 +34,7 @@
                   <td>{{item.id}}</td>
                 <td><a href="catalog/{{ item.id }}">{{ item.item_name }}</a></td>
                 <td>{{item.price}} руб.</td>
-                <td>{{item.seller_name}}</td>
+                <td>{{item.name_one}}</td>
                   <td>{{item.start_date}}</td>
             </tr>
         {% endfor %}
