--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
       </li>
       <li class="nav-item">
         {% if current_user.is_authenticated %}
-    <a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
+    <a class="navbar-brand" href="/logout">{{ current_user.surname }}</a>
     {% else %}
     <p>
         <a class="btn btn-primary " href="/register">Зарегистрироваться</a>
