--- a/templates/item_desc.html
+++ b/templates/item_desc.html
@@ -20,8 +20,8 @@
         {% endif %}
         <p style="text-align: center">{{ description }}</p>
         <div style="text-align: center">
-            <form action="{{ url_for('buy') }}" method="POST">
-                <button class="btn btn-success">Купить</button>
+            <form action="{{ url_for('buy_solo', item_id=item_id) }}" method="POST">
+      <button class="btn btn-success">Купить</button>
             </form>
             <form action="{{ url_for('add_to_basket', item_id=item_id) }}" method="POST">
                 <button class="btn btn-success">В корзину</button>
